# renpy-translator

./: .coverage  .gitattributes  .gitignore  0-setup.ps1  1-benchmark.ps1  1-config.ps1  2-extract.ps1  2-test.ps1  3-config.ps1  3-stage.ps1  3-translate.ps1  4-correct.ps1  4-extract.ps1  5-merge.ps1  5-translate.ps1  7-all-in-one-translate.ps1  7-merge.ps1  7-test.ps1  8-compare.ps1  8-test.ps1  9-benchmark.ps1  AGENTS.md  CLAUDE.md  LICENSE  MODELS_STATUS.md  MONOREPO-SUMMARY.md  PHASE1-STANDALONE-STATUS.md  PLAN-DECOUPLE.md  PLAN.md  README.md  STATUS.md  TROUBLESHOOTING.md  VSCODE_TESTING_SETUP.md  characters.ps1  conftest.py  convert_json_to_yaml.py  correct.ps1  extract.ps1  merge.ps1  pyproject.toml  (+11 more)
data/: ro_benchmark.json  ro_benchmark.yaml  ro_glossary.json  ro_glossary.yaml
data/prompts/: translate.txt
games/Example/: README.md
games/Example/game/: script.rpy
games/Example/game/tl/romanian/: Cell01_Academy.parsed.yaml  Cell01_Academy.rpy  Cell01_Academy.tags.json  characters.json  script.rpy.backup
models/: MODELS.md  PLAN.md  SETUP.md  compute_profiles.yaml  current_config.yaml  local_config.json  models_config.json  models_config.yaml
renpy/: tools_config.json  tools_config.yaml
renpy/unRen/: Base64strings.txt
scripts/: benchmark.py  benchmark_translate.py  common.ps1  compare.py  config.py  config_selector.py  correct.py  correct_utils.py  correct_with_aya23.py  translate.py  translate_modular.py  translate_new.py  translate_with_aya23.py  translate_with_llmic.py  translate_with_madlad.py  user_selection.ps1
src/: batch_translator.py  core.py  extract.py  extraction.py  hardware.py  merge.py  merger.py  models.py  prompts.py  setup.py  translation_pipeline.py
src/poly_bench/: README.md  __init__.py  benchmark.py  cli.py  pyproject.toml
src/poly_bench/tests/: test_e2e_benchmark.py  test_e2e_compare.py  test_unit_compare.py
src/poly_ren/: README.md  __init__.py  extract.py  pyproject.toml
src/poly_ren/tests/: test_unit_renpy_tags.py
src/poly_trans/: POLY_TRANS_STANDALONE.md  POLY_TRANS_TESTS_FIXED.md  POLY_TRANS_TEST_RESULTS.md  README.md  __init__.py  example_usage.py  models.py  prompts.py  pyproject.toml  translate.py
src/poly_trans/data/: ro_benchmark.yaml  ro_glossary.yaml  ro_uncensored_corrections.yaml  ro_uncensored_quality_test_results.yaml  ro_uncensored_quality_test_results_fixed.yaml
src/poly_trans/models/: __init__.py  aya23_translator.py  helsinkyRo_translator.py  seamless96_translator.py  translator_utils.py
src/poly_trans/tests/: test_int_aya23.py  test_int_helsinkyRo.py  test_int_madlad400.py  test_int_mbartRo.py  test_int_seamless96.py  test_unit_translate.py
src/poly_trans/translators/: aya23_translator.py  helsinkyRo_translator.py  madlad400_translator.py  mbartRo_translator.py  seamless96_translator.py  translator_utils.py
src/translators/: __init__.py  aya23_translator.py  aya23_wrapper_translator.py  helsinkyRo_translator.py  llama_cpp_translator.py  llmic_translator.py  madlad400_translator.py  mbartRo_translator.py  mbart_translator.py  nllb200_translator.py  quickmt_translator.py  seamless96_translator.py  seamlessm4t_translator.py  translator_utils.py
tests/: FIX_SUMMARY.md  README.md  __init__.py  conftest.py  test-compare.ps1  test_benchmark.py  test_characters.py  test_e2e_all_example_game.py  test_e2e_all_example_game.py.SKIP  test_e2e_aya23.py  test_e2e_benchmark.py  test_e2e_compare.py  test_e2e_example.py  test_e2e_example_fast.py  test_e2e_example_game.py  test_e2e_example_new.py  test_e2e_helsinkyRo.py  test_e2e_llmic.py  test_e2e_madlad.py  test_e2e_madlad400.py  test_e2e_mbart.py  test_e2e_mbartRo.py  test_e2e_orion14b.py  test_e2e_quickmt.py  test_e2e_seamless96.py  test_e2e_seamlessm4t.py  test_e2e_translate_aio.py  test_e2e_translate_aio_uncensored.py  test_end_to_end.py  test_end_to_end_uncensored.py  test_example_game.py  test_extract_script.py  test_extraction_merge.py  test_i_aya23.py  test_i_seamlessm4t.py  test_int_aya23.py  test_int_ayaExpanse8b.py  test_int_compare.py  test_int_helsinkyRo.py  test_int_llama_cpp.py  (+35 more)
