[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poly-trans"
version = "1.0.0"
description = "Local neural translation engine with context awareness and glossary support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Enro Team"}
]
keywords = ["translation", "neural", "local", "offline", "multilingual", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "llama-cpp-python>=0.2.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["poly_trans", "poly_trans.translators"]
package-dir = {"" = ".."}
include-package-data = true

[tool.setuptools.package-data]
poly_trans = ["data/**/*.yaml", "data/**/*.yml"]
